<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparentBlack"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="19dp"

        android:background="@drawable/rounded_white_bg"
        app:layout_constraintTop_toTopOf="parent"
        >
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            app:layout_constraintTop_toTopOf="parent"
            >

        </View>


        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age_verification"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"

            android:layout_marginHorizontal="18dp"
            app:layout_constraintTop_toTopOf="@id/view"
            >

        </TextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/view"
            tools:layout_editor_absoluteX="16dp">


            <TextView
                android:id="@+id/tv_i_have"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/are_you_over_18"
                android:textColor="@color/dark_gray_text"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:elevation="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_i_have"
                app:layout_constraintBottom_toBottomOf="parent"

                >

                <androidx.constraintlayout.widget.ConstraintLayout

                    android:id="@+id/id_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="25dp"
                    >

                    <ImageView
                        android:id="@+id/btn_upload_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/upload_id_icon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        >

                    </ImageView>

                    <TextView
                        android:id="@+id/tv_upload_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload_your_id_card"
                        android:textSize="18sp"
                        android:textColor="@color/gray_text"
                        android:layout_marginTop="13dp"
                        app:layout_constraintTop_toBottomOf="@id/btn_upload_video"
                        app:layout_constraintLeft_toLeftOf="@id/btn_upload_video"
                        app:layout_constraintRight_toRightOf="@id/btn_upload_video"
                        >

                    </TextView>
                    <ImageView
                        android:id="@+id/id_image"
                        android:layout_width="280dp"
                        android:layout_height="200dp"
                        android:visibility="gone"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        >

                    </ImageView>





                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>




        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_decline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bottom_round_gray"
            android:text="@string/decline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_verify"
            app:layout_constraintTop_toBottomOf="@id/ll_main"
            >

        </androidx.appcompat.widget.AppCompatButton>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_verify"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/btn_bottom_round_gradient"
            android:text="@string/verify"
            app:layout_constraintLeft_toRightOf="@id/btn_decline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_main">

        </androidx.appcompat.widget.AppCompatButton>

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>