<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/black_color"
    tools:context=".views.fragments.LoginFragment">
<!--    <TextView
        android:id="@+id/tv_prelogin"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

    </TextView>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >



    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main_icon"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        >
        <ImageView
            android:id="@+id/iv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/email_icon_blue"
            android:layout_marginRight="12dp"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            >

        </ImageView>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:layout_marginLeft="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/iv_email"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/email_address"
            >

        </TextView>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:paddingLeft="40dp"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            >

        </EditText>

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pass_icon"
            android:layout_marginRight="12dp"
            android:layout_marginTop="35dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            >

        </ImageView>

        <TextView
            android:id="@+id/tv_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="24dp"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintLeft_toRightOf="@id/iv_password"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/password"
            >

        </TextView>

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:paddingLeft="40dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_pass"
            >

        </EditText>


        <ImageView
            android:id="@+id/iv_show_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="22dp"
            android:src="@drawable/ic_baseline_visibility_off_24"
            app:layout_constraintRight_toRightOf="@id/et_pass"
            app:layout_constraintTop_toTopOf="@id/et_pass"
            app:layout_constraintBottom_toBottomOf="@id/et_pass"
            app:tint="@color/grey">

        </ImageView>
        <TextView
            android:id="@+id/tv_forget_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"

            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/et_pass"
            app:layout_constraintLeft_toRightOf="@id/iv_password"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/forgot_password"
            >

        </TextView>

        <ProgressBar
            android:id="@+id/pb_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            android:indeterminateTint="@color/white"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@id/btn_login"
            app:layout_constraintRight_toRightOf="@id/btn_login"
            app:layout_constraintTop_toTopOf="@id/btn_login"
            app:layout_constraintBottom_toBottomOf="@id/btn_login"
            >

        </ProgressBar>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:background="@drawable/bg_main_btn"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_forget_pass"
            >

        </androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:id="@+id/tv_dont_have_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/dont_have_account"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintLeft_toRightOf="@id/iv_password"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            >

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
    </layout>