<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_color"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.CreatePostFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >



    <androidx.cardview.widget.CardView
        android:id="@+id/card_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent"

        >
        <ImageView
            android:id="@+id/iv_Post_media"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:visibility="gone"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

        </ImageView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/post_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingVertical="25dp">



            <ImageView
                android:id="@+id/btn_upload_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/upload_video_btn_icon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <TextView
                android:id="@+id/tv_upload_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/upload_video"
                android:textColor="@color/gray_text"
                android:textSize="17sp"
                app:layout_constraintLeft_toLeftOf="@id/btn_upload_video"
                app:layout_constraintRight_toRightOf="@id/btn_upload_video"
                app:layout_constraintTop_toBottomOf="@id/btn_upload_video">

            </TextView>

            <View
                android:layout_width="2dp"
                android:layout_height="57dp"
                android:background="@color/gray_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/btn_upload_video"
                app:layout_constraintRight_toLeftOf="@id/btn_picture_video"
                app:layout_constraintTop_toTopOf="parent">

            </View>


            <ImageView
                android:id="@+id/btn_picture_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@drawable/upload_img_btn_icon"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <TextView
                android:id="@+id/tv_picture_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/upload_image"

                android:textColor="@color/gray_text"
                android:textSize="17sp"
                app:layout_constraintLeft_toLeftOf="@id/btn_picture_video"
                app:layout_constraintRight_toRightOf="@id/btn_picture_video"
                app:layout_constraintTop_toBottomOf="@id/btn_picture_video">

            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="60dp"
            app:layout_constraintTop_toBottomOf="@id/card_upload"
            tools:layout_editor_absoluteX="36dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/title"
                android:textColor="@color/gray_text"
                android:textSize="13sp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:backgroundTint="@color/white"
                android:text="Lorem Ipsum Dummy Title"
                android:textColor="@color/gray_text"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title">

            </EditText>

            <EditText
                android:id="@+id/et_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:backgroundTint="@color/white"
                android:gravity="start"
                android:hint="@string/description"
                android:minHeight="150dp"
                android:textColor="@color/gray_text"
                android:textColorHint="@color/dark_gray_text"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_title">

            </EditText>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_main_btn"
                android:text="@string/create"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/et_des"

                >

            </androidx.appcompat.widget.AppCompatButton>

            <ProgressBar
                android:id="@+id/pb_createPos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="20dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/btn_create"
                app:layout_constraintLeft_toLeftOf="@id/btn_create"
                app:layout_constraintRight_toRightOf="@id/btn_create"
                app:layout_constraintTop_toTopOf="@id/btn_create">

            </ProgressBar>
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>